@@ -1,3 +1,7 @@
+109
+-- changed --help to give overview of help
+-- fixed stream_ip alerts (defrag -> stream_ip)
+
 108
 -- added IpsAction for ips rule action plugins
 -- renamed various api *init() and *term() for consistency and possible
